@@ -192,7 +192,7 @@ define make-exe
 	    -u atexit -u __vectors -u start \
 	    $(START_FILE) $(LINK_OBJS) --start-group $(LINK_LIBS) --end-group
 	$(NM) -g -n $(basename $@)_sym.exe> $(basename $@).nm
-	$(STRIP) -o $(basename $@).exe $(basename $@)_sym-exe
+	$(STRIP) -O $(basename $@).exe $(basename $@)_sym-exe
 	$(SIZE) $(basename $@)_sym.exe
 endef
 else
